--- a/birdhome.html
+++ b/birdhome.html
@@ -98,12 +98,12 @@
         <nav class="navbar navhome">
             <ul class="nav navbar-nav">
                 <li><a href="index.html">首页</a></li>
-                <li class="active"><a href="design.html">设计</a></li>
+                <li><a href="design.html">设计</a></li>
                 <li><a href="photo.html">摄像</a></li>
                 <li><a href="it.html">IT</a></li>
                 <li><a href="caibird.html">菜鸟课堂</a></li>
                 <li><a href="#">项目申请</a></li>
-                <li><a href="oldbird.html">老鸟客厅</a></li>
+                <li class="active"><a href="oldbird.html">老鸟客厅</a></li>
                 <li><a href="aboutus.html">加入我们</a></li>
         </nav>
     </div>
