--- a/oldbird.html
+++ b/oldbird.html
@@ -15,10 +15,6 @@
     <script src="js/angular.min.js"></script>
     <script src="js/ui-bootstrap-tpls-0.10.0.js" type="text/javascript"></script>
     <style type="text/css">
-    .active {
-        color: red;
-    }
-    
     a {
         color: grey;
     }
@@ -222,12 +218,12 @@
         <nav class="navbar navhome">
             <ul class="nav navbar-nav">
                 <li><a href="index.html">首页</a></li>
-                <li class="active"><a href="design.html">设计</a></li>
+                <li><a href="design.html">设计</a></li>
                 <li><a href="photo.html">摄像</a></li>
                 <li><a href="it.html">IT</a></li>
                 <li><a href="caibird.html">菜鸟课堂</a></li>
                 <li><a href="#">项目申请</a></li>
-                <li><a href="oldbird.html">老鸟客厅</a></li>
+                <li><a href="oldbird.html" class="active">老鸟客厅</a></li>
                 <li><a href="aboutus.html">加入我们</a></li>
         </nav>
     </div>
@@ -258,7 +254,7 @@
                 <div class="item" ng-repeat="itemline in filtered = items | filter:search | startFrom:(currentPage-1)*entryLimit | limitTo:entryLimit">
                     <img class="img-responsive itemimg" src="img/Dbird.png" alt="">
                     <div class="itemdesc">
-                        <p class="itemtitle">{{itemline.name}}</p>
+                        <p class="itemtitle"><a href="birdhome.html?id=1">{{itemline.name}}</a></p>
                         <p class="itemtext"><span>{{itemline.gender}} &nbsp / &nbsp </span>
                             <span>{{itemline.city}}&nbsp / &nbsp</span><span>{{itemline.job}}</span></p>
                         <p class="itemtext"><span>{{itemline.birdLongtext}}</span></p>
